src/test/ui/default-ty-param-fallback/related_depent_defaults.stderr
error[E0282]: type annotations needed
  --> $DIR/related_depent_defaults.rs:21:13
   |
21 |     let a = Opt::Non;
   |         -   ^^^^^^^^ cannot infer type for `T`
   |         |
   |         consider giving `a` a type

error: aborting due to previous error

